--- a/css/style.css
+++ b/css/style.css
@@ -1,51 +1,43 @@
 .navbar{
     background-color: white;
-    padding: 2px 15px 2px 15px;
+    padding: 2px 15px 0px 15px;
 }
-/*
-body{
-    background-image:url(/img/bg8.jpg);
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+a.nav-link{
+    font-family: 'Comfortaa', cursive;
+    text-transform: lowercase;
 }
-*/
-
+.navbar-brand{
+    font-family: 'Reenie Beanie', cursive;
+    font-size: 1.5rem;
+}
+a.nav-link:hover{
+/*    text-decoration: underline;*/
+}
 
 h1{
-/*    font-family: 'Bilbo', cursive;*/
     font-family: 'Courgette', cursive;
-/*    font-family: 'Kaushan Script', cursive;*/
-    font-family: 'Marck Script', cursive;
-/*    font-family: 'Open Sans Condensed', sans-serif;*/
-    font-family: 'Poiret One', cursive;
-/*    font-family: 'Raleway', sans-serif;*/
-    font-family: 'Sacramento', cursive;
+    font-size: 3.5rem;
+    
 /*    font-family: 'Comfortaa', cursive;*/
-    font-family: 'Montez', cursive;
-/*    font-family: 'Tulpen One', cursive;*/
-/*    font-family: 'Righteous', cursive;*/
-    font-family: 'Comfortaa', cursive;
-
 }
 h2{
     font-family: 'Zilla Slab Highlight', cursive;
-    font-size:1.5rem;
+    font-size: 1.5rem;
 }
 h3{
     font-family: 'Reenie Beanie', cursive;
 }
 h4{
-    font-family: 'Fredericka the Great', cursive;
 }
 h5{
     font-family: 'Montserrat', sans-serif;
+    font-size: 1rem;
 }
 h6{
     font-family: 'Fira Mono', monospace;
-    font-family: 'Source Code Pro', monospace;
-    font-family: 'Inconsolata', monospace;
+    font-size: .8rem;
 }
 p{
     font-family: 'Open Sans', sans-serif;
-    font-family: 'Josefin Slab', serif;
+    font-size: 1rem;
 }
