--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,14 @@ a.nav-link{
 a.nav-link:hover{
 /*    text-decoration: underline;*/
 }
+.card-columns {
+  @include media-breakpoint-only(lg) {
+    column-count: 4;
+  }
+  @include media-breakpoint-only(xl) {
+    column-count: 5;
+  }
+}
 
 h1{
     font-family: 'Courgette', cursive;
