--- a/css/style.css
+++ b/css/style.css
@@ -1,51 +1,74 @@
-.navbar{
+.navbar {
     background-color: white;
     padding: 2px 15px 0px 15px;
-}
-a.nav-link{
-    font-family: 'Comfortaa', cursive;
-    text-transform: lowercase;
-}
-.navbar-brand{
-    font-family: 'Reenie Beanie', cursive;
-    font-size: 1.5rem;
-}
-a.nav-link:hover{
-/*    text-decoration: underline;*/
-}
-.card-columns {
-  @include media-breakpoint-only(lg) {
-    column-count: 4;
-  }
-  @include media-breakpoint-only(xl) {
-    column-count: 5;
-  }
+    margin-bottom: 50px;
 }
 
-h1{
+a.nav-link {
+    font-family: 'Open Sans', sans-serif;
+    text-transform: lowercase;
+}
+
+.navbar-brand {
+    margin-top: -10px;
+}
+
+a.nav-link:hover {
+    /*    text-decoration: underline;*/
+}
+
+
+h1 {
     font-family: 'Courgette', cursive;
     font-size: 3.5rem;
-    
-/*    font-family: 'Comfortaa', cursive;*/
 }
-h2{
-    font-family: 'Zilla Slab Highlight', cursive;
-    font-size: 1.5rem;
+
+h2 {}
+
+h3 {}
+
+h4 {}
+
+h5 {}
+
+h6 {
+    font-family: 'Fira Mono', monospace;
+    font-size: .9rem;
 }
-h3{
-    font-family: 'Reenie Beanie', cursive;
-}
-h4{
-}
-h5{
-    font-family: 'Montserrat', sans-serif;
+
+p {
+    font-family: 'Open Sans', sans-serif;
     font-size: 1rem;
 }
-h6{
+
+.jumbotron {
+    background-color: white;
+    border: 2px solid whitesmoke;
+    box-shadow: 1px 1px aquamarine;
+}
+
+.card-header {
+    font-size: 20px;
+    background: none;
+}
+
+.list-group-item {
     font-family: 'Fira Mono', monospace;
     font-size: .8rem;
 }
-p{
-    font-family: 'Open Sans', sans-serif;
-    font-size: 1rem;
+
+.card-text {
+    font-size: .9rem;
+}
+
+.card-link a {
+    font-size: .9rem;
+}
+
+.card-link a:hover {
+    font-size: .9rem;
+    text-decoration: none;
+}
+.xyz{
+
 }
