--- a/test/structure-test/CSS/app.css
+++ b/test/structure-test/CSS/app.css
@@ -1,14 +1,31 @@
 body {
-  width: 100%;
-  padding: 40px 50px; }
+  margin: 0;
+  padding: 0;
+  width: 100%; }
+
+h1 {
+  color: #eee;
+  font-family: Georgia, Times, serif; }
 
 #footer {
   color: white;
   background-color: #333; }
 
 #header {
-  padding: 20px;
-  width: 100%; }
+  text-align: center;
+  display: block;
+  width: 100%;
+  background-color: #008975; }
+  #header h1 {
+    margin: 0;
+    padding: 10px 0; }
+
+#main-content {
+  width: 100%;
+  padding: 20px 30px;
+  box-sizing: border-box;
+  display: inline-block;
+  background-color: grey; }
 
 .btn-large {
   padding: 30px 40px;
@@ -20,8 +37,38 @@ body {
   background-color: teal;
   color: black; }
 
-.main-nav {
-  background-color: grey;
-  border: 1px solid black; }
+#main-nav {
+  background-color: #00AA8D;
+  width: 100%;
+  display: block;
+  padding: 10px 0 40px; }
+  #main-nav ul {
+    margin: 0;
+    padding: 0;
+    list-style-type: none; }
+    #main-nav ul li {
+      float: left;
+      margin-left: 30px; }
+      #main-nav ul li a {
+        text-decoration: none;
+        font-size: 22px;
+        color: #eee; }
+        #main-nav ul li a:hover {
+          color: red; }
+
+.pro-img {
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  border-radius: 50px;
+  -webkit-box-shadow: 0 0 15px #555;
+  -moz-box-shadow: 0 0 15px #555;
+  box-shadow: 0 0 15px #555;
+  border: 1px solid #00AA8D;
+  background-color: #00AA8D;
+  width: 22%;
+  height: 120px;
+  display: inline-block;
+  float: left;
+  margin: 15px; }
 
 /*# sourceMappingURL=app.css.map */
