--- a/test/structure-test/SASS/base/_base.sass
+++ b/test/structure-test/SASS/base/_base.sass
@@ -1,4 +1,8 @@
 body
+    margin: 0
+    padding: 0
     width: 100%
-    padding: 40px 50px
     
+h1
+    color: $brand-light
+    font-family: $font-stack-serif
