--- a/test/structure-test/SASS/layouts/_header.sass
+++ b/test/structure-test/SASS/layouts/_header.sass
@@ -1,4 +1,8 @@
 #header
-    padding: 20px
+    text-align: center
+    display: block
     width: 100%
-    
+    background-color: $brand-dark
+    h1
+        margin: 0
+        padding: 10px 0
