--- a/test/structure-test/SASS/_mixins.sass
+++ b/test/structure-test/SASS/_mixins.sass
@@ -1,10 +1,11 @@
-=border()
-    -webkit-border-radius: 50px
-    -moz-border-radius: 50px
-    border-radius: 50px
+=border($shadow, $border)
+    -webkit-box-shadow: $shadow
+    -moz-box-shadow: $shadow
+    box-shadow: $shadow
 
-    -webkit-box-shadow: 0 0 15px #555
-    -moz-box-shadow: 0 0 15px #555
-    box-shadow: 0 0 15px #555
+    border: $border
 
-    border: 1px solid $brand-primary
+=border-rad($rad)
+    -webkit-border-radius: $rad
+    -moz-border-radius: $rad
+    border-radius: $rad
