--- a/test/structure-test/SASS/_variables.sass
+++ b/test/structure-test/SASS/_variables.sass
@@ -1,10 +1,10 @@
 $brand-primary: #00AA8D
-$brand-secondary: #333
+$brand-secondary: pink
 $brand-dark: #008975
-$brand-light: #eee
+$brand-light: pink
 $brand-grey: grey
 
 $font-stack-serif: Georgia, Times, serif
 $font-stack-sans-serif: Helvetica, Arial, sans-serif
 $font-base: 16px
-$font-large: 40px
+$font-large: 50px
