--- a/test/structure-test/SASS/app.sass
+++ b/test/structure-test/SASS/app.sass
@@ -1,5 +1,6 @@
-@import "variables.sass"
-@import "mixins.sass"
+@import "variables"
+@import "mixins"
+@import "extends"
 @import "base/base-dir"
 @import "layouts/layouts-dir"
 @import "modules/modules-dir"
