--- a/test/structure-test/SASS/modules/_navbar.sass
+++ b/test/structure-test/SASS/modules/_navbar.sass
@@ -12,7 +12,7 @@
             margin-left: 30px
             a 
                 text-decoration: none
-                font-size: 22px
+                font-size: 32px
                 color: $brand-light
                 &:hover
-                    color: red
+                    color: 
