--- a/test/structure-test/SASS/modules/_proimage.sass
+++ b/test/structure-test/SASS/modules/_proimage.sass
@@ -1,9 +1,11 @@
 .pro-img
-    +border()
+    +border(0 0 15px #edf455, 1px solid $brand-primary)
+    +border-rad(50%)
     background-color: $brand-primary
     width: 22%
     height: 120px
     display: inline-block
     float: left
     margin: 15px
+    
     
