--- a/test/structure-test/SASS/modules/_proimage.sass
+++ b/test/structure-test/SASS/modules/_proimage.sass
@@ -1,5 +1,6 @@
 .pro-img
-    +border()
+    +border(0 0 15px red, 1px solid $brand-primary)
+    +border-rad(50px)
     background-color: $brand-primary
     width: 22%
     height: 120px
