--- a/test/new sass proj/sass/_variables.sass
+++ b/test/new sass proj/sass/_variables.sass
@@ -12,6 +12,12 @@ $base-gray:         #D1D9D3 // LIGHT GRAY
 $white:             #ffffff
 $black:             #000000
 
+// potential btn colors
+// #FB6107
+// #73B532
+// #E01A4F
+// #DDD039
+// #71BBD6
 
 // fonts
 $font-family-apple:     -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI"
