add picture to about

--- a/test/new sass proj/sass/_variables.sass
+++ b/test/new sass proj/sass/_variables.sass
@@ -1,7 +1,6 @@
 // global vars
 
 // colors
-
 $brand-primary:     #B5FFAD // LIGHT MOSS GREEN
 $brand-secondary:   #5B2333 // CAPUT MORTUUM
 
@@ -36,4 +35,15 @@ $border-width:          1px
 $border-radius:         10px
 
 // button
-$btn-main-color:        $base-light
+$btn-one:               $base-light
+$btn-two:               $base-dark
+$btn-three:             $base-grey
+
+$btn-border-one:        $base-light
+$btn-border-two:        $base-dark
+$btn-border-three:      $base-grey
+
+$btn-padding-x:         1rem
+$btn-padding-y:         .5rem
+$btn-line-height:       $base-line-height
+$btn-transition:        all, .2s, ease-in-out
