--- a/css/style.css
+++ b/css/style.css
@@ -69,3 +69,23 @@ p {
     font-size: .9rem;
     text-decoration: none;
 }
+
+.portrait img{
+    border-radius: 50%;
+    -webkit-box-shadow: 0px 0px 20px #d2d2d2;
+        /* box-shadow: 0 0 15px black; */
+    /* height: 120px; */
+    /* display: inline-block; */
+    /* box-shadow: 2px 2px 20px aquamarine; */
+    display: block;
+    margin-left: auto;
+    margin-right: 5%;
+    position: absolute;
+}
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: 5%;
+    /* width: 50%; */
+  }
