--- a/css/style.css
+++ b/css/style.css
@@ -66,24 +66,24 @@ body,
     height:auto;
     min-height: 100vh;
 }
+
+html {
+    scroll-behavior: smooth;
+}
 #section_About, 
 #section_Projects, 
 #section_Contact{
+    height:auto;
     padding-top:50px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;    
-    height:100%
-}
-html {
-    scroll-behavior: smooth;
+    height:100%;
+    min-height: 100vh;
 }
 #section_About {
     background-color:black;
-    background-image: url(/img/bg5.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;    
+    background-image: url(/img/bg4.jpg);
 }
 #section_Projects {
     background-color: whitesmoke;
