--- a/css/style2.css
+++ b/css/style2.css
@@ -64,8 +64,8 @@ body,
 #section_About,
 #section_Projects, 
 #section_Contact{
-    height:auto;
-    min-height: 100vh;
+    /* height:auto; */
+    /* min-height: 100vh; */
 }
 
 html {
@@ -76,20 +76,20 @@ html {
 #section_About, 
 #section_Projects, 
 #section_Contact{
-    height:auto;
+    /* height:auto; */
     padding-top:50px;
-    background-position: center;
-    background-repeat: no-repeat;
+    /* background-position: center; */
+    /* background-repeat: no-repeat; */
     background-size: cover;    
-    height:100%;
+    /* height:100%; */
     min-height: 100vh;
 }
 
 #section_About{
-    background-image: url("http://ed-yu.com/test/img/bg4.jpg");
-    width:100vw;
-    height: 100vh; 
-    background-size: cover;
+    background-image: url("http://ed-yu.com/img/bg4.jpg");
+    /* width:100vw; */
+    /* height: 100vh;  */
+    /* background-size: cover; */
     background-color:black;
 }
 #section_Projects {
@@ -97,17 +97,18 @@ html {
     padding-left:20px;
     padding-right:20px;
     /* background-image: url("http://ed-yu.com/test/img/bg4.jpg"); */
-    width:100vw;
-    height: 100vh; 
+    /* width:100vw; */
+    /* height: 100vh;  */
     background-size: cover;
 }
 #section_Contact {
-    width:100vw;
-    height: 100vh; 
-    background-size: cover;
+    /* width:100vw; */
+    /* height: 100vh;  */
+    /* background-size: cover; */
     background-color:black;
-    background-image: url("http://ed-yu.com/test/img/bg2.jpg");
-    width:100vw;
+    background-image: url("http://ed-yu.com/img/bg2.jpg");
+    min-height: 130vh;
+    /* width:100vw; */
 }
 
 
@@ -216,11 +217,11 @@ html {
     text-decoration: none;
 }
 
-.contactMe a:hover,
+/* .contactMe a:hover,
 .contactMe a{
     color: #0f236a;
     text-decoration: none;
-}
+} */
 .help-block.with-errors {
     color: #ff5050;
     margin-top: 5px;
@@ -229,12 +230,12 @@ label {
     color: #333;
 }
 
-.btn-send {
+/* .btn-send {
     font-weight: 300;
     text-transform: uppercase;
     letter-spacing: 0.2em;
     margin-bottom: 20px;
-}
+} */
 
 .card-header{
     font-size: 1.4rem;
